fix(send confirm): helper button alignment

--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -213,7 +213,7 @@
         .helper {
           position: absolute;
           right: -15px;
-          top: 10px;
+          top: 2px;
         }
       }
     }
